repos/emily-python/contents/test/export/fail/object.em
# let and export not allowed together
# Expect failure

let z = inherit Object
	export q = 3
